styling library + fixing covers and functionality

--- a/style.css
+++ b/style.css
@@ -1,10 +1,44 @@
+* {
+    margin: 0;
+    padding: 0;
+    background-color: #101010;
+}
+
 .book {
-    color: rgb(128, 77, 0);
+    color: white;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .borrow {
     color: white;
-    background-color: black;
+    background-color: royalblue;
     border-radius: 1vw;
+    border-color: rgb(25, 64, 184);
+    width: 100px;
+    height: 50px;
+}
+
+#books {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+}
+
+#title {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: royalblue;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 100px;
+}
+
+img {
+    width: 250px;
+    height: 400px;
+    cursor: pointer;
 }
